<resources>
    <string name="app_name">SnakeQuest</string>
    <string name="your_score">Количество очков: </string>
    <string name="Restart">Заново</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="snake_quest">SnakeQuest</string>
    <string name="select_difficulty">Выберите уровень сложности</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="pause">Пауза</string>
    <string name="continue_game">Продолжить</string>
    <string name="exit">Выход</string>
</resources>